[package]
name = "anoma_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anoma = { git = "https://github.com/anoma/anoma", branch = "tomas/masp-wasm-build-fixes", features = ["rand", "ferveo-tpke"] }